5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1582_1328.log
== TEST (2019-03-25 23:30:33) 
-- CODE:
Valor Individual = 35
Valor Total = Valor Individual*20
print("Valor Total")
-- ERROR:
File "XXXX", line 1
    Valor Individual = 35
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:31:47) 
-- CODE:
Valor_Individual = 35
Valor_Total = Valor_Individual*20
print("Valor_Total")
-- OUTPUT:
Valor_Total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:32:44) 
-- CODE:
Valor = 35
Valor Total = Valor*20
print(Valor_Total)
-- ERROR:
File "XXXX", line 2
    Valor Total = Valor*20
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:33:06) 
-- CODE:
Valor = 35
Valor_Total = Valor*20
print(Valor_Total)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:33:33) 
-- CODE:
Valor = 35
Valor_Total = Valor*20
print(Valor_Total)
-- EXECUTION TIME:
0.137492
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
